--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,8 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <!-- <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript> -->
-    <!-- <div id="app"></div> -->
-    <!-- built files will be auto injected -->
   </body>
   <script>
-	  location.href="register.html";
+	  location.href="login.html";
   </script>
 </html>
